welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: not found: type i
    if (nums[i]==lookigFor){
             ^indexOfValue:4: error: value nums of type Array[Int] does not take type parameters.
    if (nums[i]==lookigFor){
            ^indexOfValue:4: error: not found: value lookigFor
    if (nums[i]==lookigFor){
                 ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to nums.length-1){
        ^